003: Added rabbit mq queue with 1000000 messages

--- a/Java-Traditional-Threads/Dockerfile
+++ b/Java-Traditional-Threads/Dockerfile
@@ -3,6 +3,6 @@ FROM eclipse-temurin:17-jdk
 
 WORKDIR /app
 
-COPY target/your-application.jar /app/your-application.jar
+COPY target/Java-Traditional-Threads-1.0.jar /app/Java-Traditional-Threads-1.0.jar
 
-CMD ["java", "-jar", "your-application.jar"]
+CMD ["java", "-jar", "Java-Traditional-Threads-1.0.jar"]
